--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "twitter-backend",
+  "name": "babbl-backend",
   "version": "1.0.0",
-  "description": "Twitter backend using Express, MongoDB",
+  "description": "Backend for Babble using Express, MongoDB",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "jest"
   },
-  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/saivittalb/babbl-backend.git"
+  },
+  "author": "Sai Vittal B",
+  "license": "BSL-1.0",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
